fix overflow

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -23,6 +23,7 @@
   }
   #theme-header {
     height: auto;
+    overflow: hidden;
   }
   #sidebar {
     display: none;
